--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
         </section>
         <!-- playground start -->
         <section class="play-ground ">
-            <div>
+            <div class="flex flex-col items-center gap-20 pt-20">
                 <!-- screen -->
                 <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3]">
-                    1024×320
+                    <!-- 1024×320 -->
+                    <div class="flex justify-center ">
+                        <p class="bg-[#2F2941] px-6 pb-4 rounded-b-xl text-white">Don't watch keyboard while playing...
+                        </p>
+                    </div>
+                    <div class="flex justify-center items-center h-full">
+                        <p class="text-black text-9xl font-bold">Y</p>
+                    </div>
                 </div>
                 <!-- keyboard start -->
                 <div>
@@ -67,6 +74,18 @@
                 </div>
                 <!-- keyboard end -->
                 <!-- life score -->
+                <div class="flex justify-between w-3/4">
+                    <button class="btn bg-purple-600 rounded-full text-white px-4">
+                        Life
+                        <img src="images/heart.svg" alt="">
+                        <span>1</span>
+                    </button>
+                    <button class="btn bg-purple-600 rounded-full text-white px-4">
+                        Score
+                        <img src="images/dollar.svg" alt="">
+                        <span>1</span>
+                    </button>
+                </div>
             </div>
         </section>
         <!-- playground end -->
