--- a/index.html
+++ b/index.html
@@ -75,28 +75,30 @@
                 <!-- keyboard end -->
                 <!-- life score -->
                 <div class="flex justify-between w-3/4">
+                    <!-- display life -->
                     <button class="btn bg-purple-600 rounded-full text-white px-4">
                         Life
                         <img src="images/heart.svg" alt="">
-                        <span>1</span>
+                        <span id="current-life">5</span>
                     </button>
+                    <!-- display score -->
                     <button class="btn bg-purple-600 rounded-full text-white px-4">
                         Score
                         <img src="images/dollar.svg" alt="">
-                        <span>1</span>
+                        <span id="current-score">0</span>
                     </button>
                 </div>
             </div>
         </section>
         <!-- playground end -->
         <!-- final score start -->
-        <section class="score flex justify-center items-center min-h-screen hidden">
+        <section id="final-score" class="flex justify-center items-center min-h-screen hidden">
             <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg">
                 <h1 class="text-8xl">
                     <span class="font-extrabold">Score:</span>
-                    <span>14</span>
+                    <span id="last-score">14</span>
                 </h1>
-                <button class="btn">Play Again</button>
+                <button onclick="play()" class="btn">Play Again</button>
                 <p>Practice will make you Pro</p>
             </div>
         </section>
